test/expected/declare_hf.out
declare x as short float
        ^
9: error: "short float" is illegal for built-in type
